# MiniMax-Provider-Verifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  provider.json.example  pyproject.toml  requirements.txt  verify.py
.github/ISSUE_TEMPLATE/: bug_report.md
validator/: __init__.py  base.py  repeat_ngram.py  russian_characters.py  tool_calls.py
