[project]
name = "minimax-vendor-verifier"
version = "0.1.0"
description = "A tool for verifying LLM provider response quality, supporting multiple validators and concurrent testing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llm", "testing", "verification", "tool-calls", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.25.1",
    "loguru>=0.7.3",
    "megfile>=4.2.5",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
